[gd_scene load_steps=11 format=2]

[ext_resource path="res://SS/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://SS/Main.gd" type="Script" id=2]
[ext_resource path="res://SS/MainMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://SS/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://SS/PowerUp.tscn" type="PackedScene" id=5]
[ext_resource path="res://Audio/1 - Track 1.wav" type="AudioStream" id=6]
[ext_resource path="res://SS/Enemy2.tscn" type="PackedScene" id=7]
[ext_resource path="res://SS/Enemy3.tscn" type="PackedScene" id=8]
[ext_resource path="res://Font/ARCADECLASSIC.TTF" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=1]
size = 150
font_data = ExtResource( 9 )

[node name="Main" type="Node"]
script = ExtResource( 2 )
Enemy = ExtResource( 1 )
Enemy2 = ExtResource( 7 )
Enemy3 = ExtResource( 8 )
Player = ExtResource( 4 )
PowerUp = ExtResource( 5 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" parent="." instance=ExtResource( 3 )]

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="PowerUpSpawnTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="FreezeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Result" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="Result"]
visible = false
margin_left = 192.0
margin_top = 272.0
margin_right = 1088.0
margin_bottom = 424.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResultTimer" type="Timer" parent="Result"]
wait_time = 3.0
one_shot = true

[node name="BGMPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
[connection signal="start_game" from="MainMenu" to="." method="_on_MainMenu_start_game"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_EnemySpawnTimer_timeout"]
[connection signal="timeout" from="PowerUpSpawnTimer" to="." method="_on_PowerUpSpawnTimer_timeout"]
[connection signal="timeout" from="FreezeTimer" to="." method="_on_FreezeTimer_timeout"]
[connection signal="timeout" from="Result/ResultTimer" to="." method="_on_ResultTimer_timeout"]
